Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.32 [20110612] [svn: r404]
  - sg_sat_identify: add '--ident' to output WWN
  - sg_ses: major rework of descriptor output
    - add --index, --descriptor and --join options
    - add --clear, --get and --set options
  - sg_raw: exit status corrections
  - sg_decode_sense: add --nospace and --hex options
  - sg_logs: fix bug with large --maxlen
    - zero response length when resid implies it is invalid
    - add scope field to lb provisioning lpage (sb3r27)
  - sg_inq: sync version descriptors with spc4r30
  - sg_vpd: add LBPRZ field in LB provisioning VPD page
  - sg_cmd_basic: sg_cmds_process_resp() handle status good
    with a sense key other than no_sense (e.g. completed)
  - add README.iscsi

Changelog for sg3_utils-1.31 [20110216] [svn: r386]
  - sg_decode_sense: new utility to decode sense data
  - sg_vpd: LB provisioning + Block limits pages (sbc3r26)
  - sync asc/ascq and version descriptors with spc4r28
  - sg_get_config, sg_rmsn, sg_verify: add --readonly option
  - sg_lib: implement forwarded sense data descriptor
    - decode user data segment referral sense data descriptor
  - sg_lib, sg_turs, sg_format: more precision for progress
    indication (two places after decimal point)
  - sg_lib(win32): add runtime selection of SPT direct or
    indirect interface
    - sg_read_buffer+sg_write_buffer: set SPT direct
  - add examples/forwarded_sense.txt + examples/ref_sense.txt

Changelog for sg3_utils-1.30 [20101111] [svn: r363]
  - sg_referrals: new utility for REPORT REFERRALS
  - sbc3r25 renames 'thin' provisioning' to 'logical block
    provisioning': changes in sg_format, sg_inq, sg_logs,
    sg_modes, sg_readcap, sg_vpd
  - sg_inq: update version descriptor list to spc4r27