@@ -2,7 +2,7 @@ sg3-utils (1.32-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Mon, 30 May 2011 23:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Mon, 13 Jun 2011 22:00:00 -0400
 
 sg3-utils (1.31-0.1) unstable; urgency=low
 
