@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.32 [20110612] [svn: r404]
+Changelog for sg3_utils-1.32 [20110613] [svn: r405]
   - sg_sat_identify: add '--ident' to output WWN
   - sg_ses: major rework of descriptor output
     - add --index, --descriptor and --join options
@@ -12,7 +12,8 @@ Changelog for sg3_utils-1.32 [20110612] [svn: r404]
   - sg_logs: fix bug with large --maxlen
     - zero response length when resid implies it is invalid
     - add scope field to lb provisioning lpage (sb3r27)
-  - sg_inq: sync version descriptors with spc4r30
+  - sg_inq: sync version descriptors with spc4r31
+  - sg_lib_data: sync asc/ascq codes with spc4r31
   - sg_vpd: add LBPRZ field in LB provisioning VPD page
   - sg_cmd_basic: sg_cmds_process_resp() handle status good
     with a sense key other than no_sense (e.g. completed)
